--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<body> 
 		Звіт про виконання завдань:
 		<p><a href="week01/ARindex.html" target="_blank">Домашнє завдання на тиждень 01</a>
+		<p><a href="week02/ARindex.html" target="_blank">Домашнє завдання на тиждень 02</a>
 	</body>
 </html>
