--- a/week02/ARindex.html
+++ b/week02/ARindex.html
@@ -5,7 +5,7 @@
 	<a-scene>
  		<a-sky color="grey"></a-sky>
 		<a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus>
-		<a-plane width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
+		<a-plane src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/illustration/758pxCanestra_di_frutta_(Caravaggio).jpg" width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
 		<a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
 		<a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
 		<a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
