--- a/week02/ARindex.html
+++ b/week02/ARindex.html
@@ -5,12 +5,12 @@
 	<a-scene>
  		<a-sky color="grey"></a-sky>
 		<a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus>
-		<a-plane width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
+		<a-plane width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"
+		src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg"></a-plane>
 		<a-cylinder color="yellow" height="2" radius="0.05" position="-2 -1 -5"></a-cylinder>
 		<a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
 		<a-torus-knot color="orange" radius="1.2" position="-3 1 -5"></a-torus-knot>
 		<a-plane width="9" height="2" position="3 1 -9"></a-plane>
-		<a-text value="Ð’Ñ–Ñ‚Ð°Ñ”Ð¼Ð¾ Ñƒ Ð±Ñ€Ð°ÑƒÐ·ÐµÑ€Ð½Ñ–Ð¹ VR!" font="arial-msdf.json" negate="false" color="black" width="10" position="-0.5 1 -6"></a-text>
-
+		<a-text value="Â³òàºìî ó áðàóçåðí³é VR!" font="arial-msdf.json" negate="false" color="black" width="10" position="-0.5 1 -6"></a-text>
  	</a-scene>
 </html>
