--- a/week02/ARindex.html
+++ b/week02/ARindex.html
@@ -11,6 +11,7 @@
 		<a-cylinder color="blue" height="2" radius="0.05" position="-3 -1 -5"></a-cylinder>
 		<a-torus-knot color="orange" radius="1.2" position="-3 1 -5" animation="property: rotation; to: 0 0 360; loop: true; dur: 10000"></a-torus-knot>
 		<a-plane width="9" height="2" position="3 1 -9"></a-plane>
-		<a-text value="Â³òàºìî ó áðàóçåðí³é VR!" font="arial-msdf.json" negate="false" color="black" width="10" position="-0.5 1 -6"></a-text>
+		<a-text value="Ð’Ñ–Ñ‚Ð°Ñ”Ð¼Ð¾ Ñƒ Ð±Ñ€Ð°ÑƒÐ·ÐµÑ€Ð½Ñ–Ð¹ VR!" font="arial-msdf.json" negate="false" color="black" width="10" position="-0.5 1 -6"></a-text>
+
  	</a-scene>
 </html>
