--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 		Звіт про виконання завдань:
 		<p><a href="week01/ARindex.html" target="_blank">Домашнє завдання на тиждень 01</a>
 		<p><a href="week02/ARindex.html" target="_blank">Домашнє завдання на тиждень 02</a>
+		<p><a href="week03/ARindex.html" target="_blank">Домашнє завдання на тиждень 03</a>
 	</body>
 </html>
