--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 		<title>Сайт студентки групи МІм-22 Тураєвої Ольги</title>
 	</head>
 	<body> 
-		Звіт про виконання завдань:
+		<a href="gen/generator.html" target="_blank">Генератор маркерів для AR.js</a>
+		<p>Звіт про виконання завдань:
 		<p><a href="week01/ARindex.html" target="_blank">Домашнє завдання на тиждень 01</a>
 		<p><a href="week02/ARindex.html" target="_blank">Домашнє завдання на тиждень 02</a>
 		<p><a href="week03/ARindex.html" target="_blank">Домашнє завдання на тиждень 03</a>
+		<p><a href="week04/ARindex.html" target="_blank">Домашнє завдання на тиждень 04</a>
+		<p><a href="week05/VRSolarSystem.html" target="_blank">Домашнє завдання на тиждень 05 - віртуальна сонячна система</a>
+		<p><a href="week05/ARSolarSystem.html" target="_blank">Домашнє завдання на тиждень 05 - AR сонячна система</a>
+		<p><a href="week06/triangle.html" target="_blank">Домашнє завдання на тиждень 06</a>
 	</body>
 </html>
