--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 		<p><a href="week05/VRSolarSystem.html" target="_blank">Домашнє завдання на тиждень 05 - віртуальна сонячна система</a>
 		<p><a href="week05/ARSolarSystem.html" target="_blank">Домашнє завдання на тиждень 05 - AR сонячна система</a>
 		<p><a href="week06/triangle.html" target="_blank">Домашнє завдання на тиждень 06</a>
+		<p><a href="lab1/VRHanoiTower.html" target="_blank">Лабораторна робота 1 - віртуальна Ханойська вежа</a>
+		<p><a href="lab1/ARHanoiTower.html" target="_blank">Лабораторна робота 1 - AR Ханойська вежа</a>
+		<p><a href="week07/1st.html" target="_blank">Домашнє завдання на тиждень 07</a>
+		<p><a href="week08/ar-nft.html" target="_blank">Домашнє завдання на тиждень 08</a>
+		<p><a href="week09/2nd.html" target="_blank">Домашнє завдання на тиждень 09</a>
+		<p><a href="week10/360.html" target="_blank">Домашнє завдання на тиждень 10</a>
+		<p><a href="week11/index.html" target="_blank">Домашнє завдання на тиждень 11</a>
 	</body>
 </html>
