--- a/week11/index.html
+++ b/week11/index.html
@@ -5,6 +5,24 @@
 		<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js'></script>
 		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 		<script type="module" src="index.js"></script>
+		
+		
+		
+		
+		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+		<script type="importmap">
+  		{
+   			"imports": {
+      				"three": "https://unpkg.com/three/build/three.module.js",
+      				"three/addons/": "https://unpkg.com/three/examples/jsm/"
+    			}
+  		}
+		</script>
+		
+		
+		
+		
 	</head>
 
 	<body>
