--- a/week11/index.html
+++ b/week11/index.html
@@ -9,7 +9,7 @@
 		
 		
 		
-		<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+		//<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
 		<script type="importmap">
   		{
