--- a/week11/index.html
+++ b/week11/index.html
@@ -11,14 +11,14 @@
 		
 		//<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
-		<script type="importmap">
-  		{
-   			"imports": {
-      				"three": "https://unpkg.com/three/build/three.module.js",
-      				"three/addons/": "https://unpkg.com/three/examples/jsm/"
-    			}
-  		}
-		</script>
+		//<script type="importmap">
+  		//{
+   			//"imports": {
+      			//	"three": "https://unpkg.com/three/build/three.module.js",
+      				//"three/addons/": "https://unpkg.com/three/examples/jsm/"
+    			//}
+  		//}
+		//</script>
 		
 		
 		
