--- a/week11/index.html
+++ b/week11/index.html
@@ -6,6 +6,17 @@
 		//<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 		<script type="module" src="index.js"></script>
 		
+		
+		
+		<script type="importmap">
+			{
+				"imports": {
+					"three": "../build/three.module.js",
+					"three/addons/": "./jsm/"
+				}
+			}
+		</script>
+		
 	</head>
 
 	<body>
