--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 		<p><a href="week09/2nd.html" target="_blank">Домашнє завдання на тиждень 09</a>
 		<p><a href="week10/360.html" target="_blank">Домашнє завдання на тиждень 10</a>
 		<p><a href="week11/index.html" target="_blank">Домашнє завдання на тиждень 11</a>
+		<p><a href="week12/index.html" target="_blank">Домашнє завдання на тиждень 12</a>
+		<p><a href="week12/exp.html" target="_blank">Домашнє завдання на тиждень 12</a>
+		<p><a href="lab2/1st.html" target="_blank">lab2</a>
+		<p><a href="week14/mymask.html" target="_blank">Домашнє завдання на тиждень 14</a>
 	</body>
 </html>
