--- a/week14/mymask.html
+++ b/week14/mymask.html
@@ -10,7 +10,7 @@
       }
     }
     </script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="mymask.js"></script>
   </head>
   <body>
   </body>
