--- a/week11/index.html
+++ b/week11/index.html
@@ -2,21 +2,9 @@
 <html>
 
 	<head>
-		//<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js'></script>
-		//<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+		<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js'></script>
+		<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 		<script type="module" src="index.js"></script>
-		
-		
-		
-		<script type="importmap">
-			{
-				"imports": {
-					"three": "../build/three.module.js",
-					"three/addons/": "./jsm/"
-				}
-			}
-		</script>
-		
 	</head>
 
 	<body>
