--- a/week08/ar-nft.html
+++ b/week08/ar-nft.html
@@ -16,7 +16,7 @@
 		sourceType: webcam; debugUIEnaabled: false;">
 
 
-		<a-nft  type="nft" url="/assets/tropical" emitevents registerevents>
+		<a-nft  type="nft" url="/icto/assets/tropical" emitevents registerevents>
 			<a-entity scale="15 15 15" rotation="-90 0 0" position="300 300 0">
 			<a-box position="-3 0 -5" color="black" depth="2" height="0.5" width="2"></a-box>
 			<a-box position="0 0 -5" color="black" depth="2" height="0.5" width="2"></a-box>
