--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<p><a href="week10/360.html" target="_blank">Домашнє завдання на тиждень 10</a>
 		<p><a href="week11/geo.html" target="_blank">Домашнє завдання на тиждень 11</a>
 		<p><a href="week12/fingers.html" target="_blank">Домашнє завдання на тиждень 12</a>
-		<p><a href="lab2/1st.html" target="_blank">lab2</a>
+		<p><a href="lab2/1st.html" target="_blank">Лабораторна робота 2 - сцена у віртуальній реальності, розроблена за допомогою Three.js</a>
+		<p><a href="lab2/2nd.html" target="_blank">Лабораторна робота 2 - сцена у доповненій реальності, розроблена за допомогою Three.js та AR.js</a>
 		<p><a href="week14/mymask.html" target="_blank">Домашнє завдання на тиждень 14</a>
+		<p><a href="lab2/example.html" target="_blank">EXAMPLE</a>
 	</body>
 </html>
