--- a/week06/triangle.html
+++ b/week06/triangle.html
@@ -16,7 +16,15 @@
 			</a-marker>
 			<a-marker type='pattern' url='../assets/pattern-letterC.patt' registerevents id="C">
 				<a-sphere radius="0.10" color="red"></a-sphere>
-				<a-entity id="lineCA"></a-entity>
+				<a-entity id="lineCD"></a-entity>
+			</a-marker>
+			<a-marker type='pattern' url='../assets/pattern-letterD.patt' registerevents id="D">
+				<a-sphere radius="0.10" color="red"></a-sphere>
+				<a-entity id="lineDF"></a-entity>
+			</a-marker>
+			<a-marker type='pattern' url='../assets/pattern-letterF.patt' registerevents id="F">
+				<a-sphere radius="0.10" color="red"></a-sphere>
+				<a-entity id="lineFA"></a-entity>
 			</a-marker>
 			<a-entity camera></a-entity>
 			<a-entity run></a-entity>
