--- a/week08/ar-nft.html
+++ b/week08/ar-nft.html
@@ -16,7 +16,7 @@
 		sourceType: webcam; debugUIEnaabled: false;">
 
 
-		<a-nft  type="nft" url="/icto/assets/tropical" emitevents registerevents>
+		<a-nft  type="nft" url="/assets/tropical" emitevents registerevents>
 			<a-entity scale="15 15 15" rotation="-90 0 0" position="300 300 0">
 			<a-box position="-3 0 -5" color="black" depth="2" height="0.5" width="2"></a-box>
 			<a-box position="0 0 -5" color="black" depth="2" height="0.5" width="2"></a-box>
@@ -62,7 +62,14 @@
 				animation__3 = "property: position; delay: 23100; from: 3 4 -5; to: 3 1.65 -5; dur: 1000; easing: linear; loop: 1"></a-torus>  
 		</a-entity>
 		</a-nft>
+
 		<a-entity camera></a-entity>
 	</a-scene>
 	</body>
 </html>
+
+
+
+
+
+
