--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 		<p><a href="lab2/1st.html" target="_blank">Лабораторна робота 2 - сцена у віртуальній реальності, розроблена за допомогою Three.js</a>
 		<p><a href="lab2/2nd.html" target="_blank">Лабораторна робота 2 - сцена у доповненій реальності, розроблена за допомогою Three.js та AR.js</a>
 		<p><a href="week14/mymask.html" target="_blank">Домашнє завдання на тиждень 14</a>
-		<p><a href="lab2/example.html" target="_blank">EXAMPLE</a>
+		<p><a href="lab3/webxr.html" target="_blank">Лабораторна робота 3</a>
 	</body>
 </html>
